hacerlo con plotly (pendiente)

--- a/main.ipynb
+++ b/main.ipynb
@@ -1121,28 +1121,8 @@
     "\n",
     "**max_depth: 15, n_estimators: 500** (RMSE: 50749.26045514025)\n",
     "\n",
-    "Evidentemente el RMSE es muy alto, por lo que se puede concluir que el modelo no es muy bueno, sobre todo para predecir precios bajos. Habría que adaptar el modelo a los datos.\n",
-    "\n",
-    "También me gustaría volver a probar haciendo feature engineering y agregar PRECIO/M2 como una columnta e intentar hacer un modelo con esa variable independiente."
+    "Evidentemente el RMSE es muy alto, por lo que se puede concluir que el modelo no es muy bueno, sobre todo para predecir precios bajos. Habría que adaptar el modelo a los datos."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "markdown"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
